--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -1,6 +1,6 @@
 <h1>Iniciar</h1>
-<% if (messages.error) { %>
-    <% messages.error %> 
+<% if (messages) { %>
+    <%= messages %> 
     <% } %>
 <form action="/login" method="POST">
     <div>
