refactor: Logout improved
Logout request improved to work with jwt token and redirect to login page

Crear Express API (Back End)

--- a/backend/views/index.ejs
+++ b/backend/views/index.ejs
@@ -1,4 +1,4 @@
 <h1>Bienvenido <%= name %> </h1>
-<form action="/logout?_method=DELETE" method="POST">
+<form action="/logout" method="POST">
     <button type="submit">Cerrar Sesion</button>
 </form>
